--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,44 @@
 <resources>
     <string name="app_name">RecyclerView</string>
+
+    <string-array name="county_names">
+        <item>Afghanistan</item>
+        <item>Armenia</item>
+        <item>Azerbaijan</item>
+        <item>Bahrain</item>
+        <item>Bangladesh</item>
+        <item>Bhutan</item>
+        <item>China</item>
+        <item>Indonesia</item>
+        <item>India</item>
+        <item>Iran</item>
+        <item>Iraq</item>
+        <item>Japan</item>
+        <item>Kazakhstan</item>
+        <item>Nepal</item>
+        <item>Pakistan</item>
+        <item>Sri Lanka</item>
+        <item>Turkey</item>
+    </string-array>
+
+    <string-array name="county_desc">
+        <item>Afghanistan is beautiful</item>
+        <item>Armenia is beautiful</item>
+        <item>Azerbaijan is beautiful</item>
+        <item>Bahrain is beautiful</item>
+        <item>Bangladesh is beautiful</item>
+        <item>Bhutan is beautiful</item>
+        <item>China is beautiful</item>
+        <item>Indonesia is beautiful</item>
+        <item>India is beautiful</item>
+        <item>Iran is beautiful</item>
+        <item>Iraq is beautiful</item>
+        <item>Japan is beautiful</item>
+        <item>Kazakhstan is beautiful</item>
+        <item>Nepal is beautiful</item>
+        <item>Pakistan is beautiful</item>
+        <item>Sri Lanka is beautiful</item>
+        <item>Turkey is beautiful</item>
+    </string-array>
+
 </resources>
